# Flask_blog

./: .gitignore  Dockerfile  README.md  app.py  config.py  example.env  manage.py  migrations.json  pyproject.toml
flask_blog/: app.py  config.py
flask_blog/blueprints/: __init__.py  autenfication.py  misc.py  user.py  view.py
flask_blog/controllers/: authorization.py  controllers.py  files.py  filescontroller.py  registration.py  users.py  userscontroller.py
flask_blog/db/: connect_db.py  request_database.py
flask_blog/forms/: forms.py
flask_blog/models/: models.py
flask_blog/models/migrations/: 0001_migration_202211211604.py
flask_blog/static/css/: style.css
flask_blog/templates/: base.html  login.html  main.html  profile.html  register.html  view.html
flask_blog/views/: view.py
migrations/: 0001_migration_202212122104.py  0002_migration_202301052152.py  0003_migration_202301111554.py
tests/: TestUser.py  conftest.py  test_autenfication.py  test_profile.py  tests_misc.py
