[tool.poetry]
name = "flask-blog"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "flask_blog"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.2"
python-dotenv = "^0.21.0"
peewee = "^3.15.4"
peewee-migrations = "^0.3.32"
psycopg2 = "^2.9.5"
bcrypt = "^4.0.1"
wtforms = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
