[tool.poetry]
name = "flask-blog"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "flask_blog"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "2.2.2"
python-dotenv = "0.21.0"
peewee = "3.15.4"
bcrypt = "4.0.1"
wtforms = "3.0.1"
flask-wtf = "1.0.1"
flask-session = "0.4.0"
psycopg2-binary = "2.9.6"
peewee-migrations = "0.3.32"
black = "23.3.0"


[tool.poetry.group.development.dependencies]
pytest = "7.2.1"
pytest-flask = "1.2.0"
responses = "0.22.0"
coverage = "7.1.0"
faker = "16.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
